# Bike-Rental-Demand-Prediction

./: README.md  main.py  pyproject.toml  requirements.txt
Data/: Bike_Rental_Demand_Prediction_Datamites.ipynb
app/: main.py  schemas.py
frontend/: index.html  script.js  style.css
models/: preprocessor.pkl
